<resources>
    <string name="app_name">TaskManager</string>
    <string name="task_title_hint">Enter a title for the Task</string>
    <string name="task_solved_label">Solved?</string>
    <string name="task_title_label">Title</string>
    <string name="task_details_label">Details</string>
    <string name="task_clicked">Clicked!</string>
    <string name="new_task">New Task</string>
    <string name="add_task_button">Save</string>
</resources>
